tests/diagnostics/tests/ui/not_a_recipe_cookbook.stderr
error[E0277]: `NotARecipe` is not a recipe of `ButtonRecipe`
  --> tests/ui/not_a_recipe_cookbook.rs:20:19
   |
20 |     let _button = HtmlButton::from(cookbook);
   |                   ^^^^^^^^^^ all recipes must implement `ButtonRecipe`
   |
help: the trait `granola::html::ButtonRecipe` is not implemented for `NotARecipe`
  --> tests/ui/not_a_recipe_cookbook.rs:15:1
   |
15 | struct NotARecipe;
   | ^^^^^^^^^^^^^^^^^
   = help: the following other types implement trait `granola::html::ButtonRecipe`:
             ()
             (A, B)
             FormmethodDialog
             FormmethodPost
             SomeRecipe
             TypeButton
             TypeReset
             TypeSubmit
             granola::recipes::FormmethodGet
   = note: required for `(NotARecipe, granola::recipes::Center)` to implement `granola::html::ButtonRecipe`
   = note: 2 redundant requirements hidden
   = note: required for `(granola::recipes::FormmethodGet, (SomeRecipe, (NotARecipe, granola::recipes::Center)))` to implement `granola::html::ButtonRecipe`
   = note: required for `granola::html::HtmlButton<(granola::recipes::FormmethodGet, (SomeRecipe, (NotARecipe, granola::recipes::Center)))>` to implement `From<(granola::recipes::FormmethodGet, (SomeRecipe, (NotARecipe, granola::recipes::Center)))>`

error[E0277]: `granola::recipes::Center` is not a recipe of `ButtonRecipe`
  --> tests/ui/not_a_recipe_cookbook.rs:20:19
   |
20 |     let _button = HtmlButton::from(cookbook);
   |                   ^^^^^^^^^^ all recipes must implement `ButtonRecipe`
   |
   = help: the trait `granola::html::ButtonRecipe` is not implemented for `granola::recipes::Center`
   = help: the following other types implement trait `granola::html::ButtonRecipe`:
             ()
             (A, B)
             FormmethodDialog
             FormmethodPost
             SomeRecipe
             TypeButton
             TypeReset
             TypeSubmit
             granola::recipes::FormmethodGet
   = note: required for `(NotARecipe, granola::recipes::Center)` to implement `granola::html::ButtonRecipe`
   = note: 2 redundant requirements hidden
   = note: required for `(granola::recipes::FormmethodGet, (SomeRecipe, (NotARecipe, granola::recipes::Center)))` to implement `granola::html::ButtonRecipe`
   = note: required for `granola::html::HtmlButton<(granola::recipes::FormmethodGet, (SomeRecipe, (NotARecipe, granola::recipes::Center)))>` to implement `From<(granola::recipes::FormmethodGet, (SomeRecipe, (NotARecipe, granola::recipes::Center)))>`
